Deploy/Staging: Fixed mobile spacing (#37)
* Fixed mobile spacing

* Added space for mobile 2nd para

* test align footer

* test align footer

* Test align footer

* Test align footer

* Test align footer

* Test align footer

* Test align footer

* Test align footer

* Test align footer

* Align footer center

* Center more

--- a/css/style.css
+++ b/css/style.css
@@ -1582,6 +1582,80 @@ article .content .caption {
     }
 }
 
+#footermobile {
+    position: absolute;
+    bottom: 0;
+    margin-bottom: 10px;
+    margin-top: auto;
+    width: 89%;
+    color: #666;
+    vertical-align: top;
+    text-align: center;
+    font-size: 11px;
+    max-width: 48rem;
+}
+
+#footermobile ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+#footermobile li {
+    display: inline-block;
+    margin-right: 15px;
+    border-right: 1px solid;
+    border-color: #666;
+    vertical-align: middle;
+}
+
+#footermobile li a {
+    margin-right: 15px;
+}
+
+#footermobile li:last-child {
+    margin-right: 0;
+    border-right: 0;
+}
+
+#footermobile li:last-child a {
+    margin-right: 0;
+}
+
+#footermobile a {
+    color: #666;
+    text-decoration: underline;
+    background-image: none;
+}
+
+#footermobile a:hover {
+    color: #858585;
+}
+
+#footermobile .footer-left {
+    height: 20px;
+    vertical-align: middle;
+    line-height: 20px;
+}
+
+@media (min-width: 39rem) {
+    #footermobile {
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: space-between;
+        align-items: center;
+        align-content: center;
+        margin-bottom: 20px;
+    }
+    #footermobile .footer-left {
+        align-self: flex-start;
+        margin-right: 20px;
+    }
+    #footermobile .footer-right {
+        align-self: flex-end;
+    }
+}
+
 .pagination {
     display: inline-block;
     margin-top: 2rem;
